[tool.poetry]
name = "pycon-2022-apm-demo"
version = "1.0.0"
description = "Demo for PyCon 2022 to show off APM"
authors = ["Jessica David <jessica.david@elastic.co>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
elastic-apm = {extras = ["flask"], version = "^6.9.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
